fixed width and spacing issues throughout page

--- a/responsive.css
+++ b/responsive.css
@@ -7,7 +7,7 @@
     display: block;
     position: absolute;
     right: 0;
-    top: 40px;
+    top: 50px;
     background-color: var(--white);
     width: 100%;
     height: 100vh;
@@ -19,6 +19,18 @@
     margin-right: 20px;
     color: #666;
   }
+
+  #link-wrapper {
+    width: 66%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 35px;
+    font-weight: 600;
+    line-height: 4;
+  }
+
+  #nav-link-blue a { color: var(--btn-link); }
+  .nav-link a { font-size: 20px; }
 
   .hdr-wrapper {
     height: 600px;
@@ -89,15 +101,19 @@
 
   .dot-wrapper { padding: 0 65px; }
   .h3-wrap { padding: 0 40px; }
-  .banner-test-wrapper { height: 1990px; }
+  .banner-test-wrapper { height: 1654px; }
+  .banner img { height: 450px; }
+  .banner-play-btn > span { bottom: 315px; }
 
   .testimonial {
     display: block;
     text-align: center;
   }
 
+  .logo-test p { font-size: 25px; }
+
   .bg-pattern {
-    bottom: 860px;
+    bottom: 738px;
     left: 115px;
   }
 
@@ -134,6 +150,9 @@
 
   .brd-btm { width: 100%; }
 
+  .cb-label,
+  .priv-txt { font-size: 20px; }
+
   .ftr-card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(215px, 1fr));
@@ -143,6 +162,11 @@
 }
 
 @media screen and (max-width: 480px) {
+  #menu[aria-expanded="true"] {
+    display: none;
+  }
+
+  #link-wrapper { display: block; }
   .bg-hdr-wrapper { transform: skewY(-16deg); }
 
   .bg-hdr2 {
@@ -190,10 +214,17 @@
   }
 
   .benefits-hdr { margin-top: 45px; }
+  .vp-wrap { padding-left: 0; }
   .vid-frame { height: 650px; }
-  .vf-wrapper { margin: 0; }
-  .center { width: 100%; }
-  .wf-content-wrap { display: flex; }
+  .vf-wrapper { max-width: 1200px; }
+  .center { width: 75%; }
+
+  .wf-content-wrap {
+    display: flex;
+    width: 75%;
+    margin: auto;
+  }
+
   .wf-content { display: block; }
 
   .dot-wrapper {
@@ -215,13 +246,13 @@
   .testimonial { padding-top: 0; }
 
   .test-img > img {
-    height: 458px;
+    height: 375px;
     left: 22px;
   }
 
   .bg-pattern {
-    bottom: 918px;
-    left: 20px;
+    bottom: 815px;
+    left: 44px;
   }
 
   .brand-wrapper {
